# bazel-coverage-not-working-repro

./: .bazelrc  .gitignore  .npmrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  coverage-to-html.sh  generateFilesAndTests.ts  package.json  pnpm-lock.yaml
examples/coverage/: BUILD.bazel  coverage_ts.ts  test_js.js  test_ts.ts  tsconfig.json
examples/foobar/: BUILD.bazel  batch.bzl  custom_js_test.bzl  custom_rules.bzl  foobar_jest.test.ts  foobar_ts.ts  jest.config.js  mocha.bzl  test_js.js  test_ts.ts  tsconfig.json  typescript.bzl
patches/: rules_js.patch
src/: BUILD.bazel  foobar.test.ts  foobar2.test.ts  foobar2.ts  mocha.bzl  mocharc.js  tsconfig.json
src/__generated__/: file1.test.ts  file1.ts  file10.test.ts  file10.ts  file100.test.ts  file100.ts  file1000.test.ts  file1000.ts  file101.test.ts  file101.ts  file102.test.ts  file102.ts  file103.test.ts  file103.ts  file104.test.ts  file104.ts  file105.test.ts  file105.ts  file106.test.ts  file106.ts  file107.test.ts  file107.ts  file108.test.ts  file108.ts  file109.test.ts  file109.ts  file11.test.ts  file11.ts  file110.test.ts  file110.ts  file111.test.ts  file111.ts  file112.test.ts  file112.ts  file113.test.ts  file113.ts  file114.test.ts  file114.ts  file115.test.ts  file115.ts  (+1960 more)
src/coverage_lib/: BUILD.bazel  coverage.ts  tsconfig.json
