load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")

ts_config(
    name = "config",
    src = "tsconfig.json"
)

ts_project(
    name = "compile",
    srcs = ["test_ts.ts", "coverage_ts.ts"],
    transpiler = "tsc",
    tsconfig = ":config",
    declaration = True,
    allow_js = False,
    deps = [
        "//:node_modules/c8",
        "//:node_modules/tslib",
        "//:node_modules/@types/node",
    ],
)

js_test(
    name = "coverage_ts",
    data = [":compile"],
    entry_point = "test_ts.js",
)

js_test(
    name = "coverage_js",
    data = ["coverage_js.js"],
    entry_point = "test_js.js",
)
