load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")

ts_config(
    name = "config",
    src = "tsconfig.json"
)

TS_FILES= [
    "foobar_ts.ts",
    "test_ts.ts",
]

ts_project(
    name = "compile",
    srcs = TS_FILES,
    transpiler = "tsc",
    tsconfig = ":config",
    declaration = True,
    allow_js = False,
    source_map = True,
    deps = [
        "//:node_modules/c8",
        "//:node_modules/tslib",
        "//:node_modules/@types/node",
    ],
)

js_test(
    name = "foobar_ts",
    data = [":compile"] + TS_FILES,
    entry_point = "test_ts.js",
    # log_level = "debug",
)

js_test(
    name = "foobar_js",
    data = ["foobar_js.js"],
    entry_point = "test_js.js",
    # log_level = "debug",
)
