load("@aspect_rules_js//js:defs.bzl", "js_test")
load(":custom_js_test.bzl", "custom_js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

ts_config(
    name = "config",
    src = "tsconfig.json"
)

TS_FILES= [
    "foobar_ts.ts",
    "test_ts.ts",
]

ts_project(
    name = "compile",
    srcs = TS_FILES,
    transpiler = "tsc",
    tsconfig = ":config",
    declaration = True,
    allow_js = False,
    source_map = True,
    deps = [
        "//:node_modules/c8",
        "//:node_modules/tslib",
        "//:node_modules/@types/node",
    ],
)

custom_js_test(
    name = "foobar_ts",
    data = [":compile"],
    entry_point = "test_ts.js",
    # log_level = "debug",
)

js_test(
    name = "foobar_js",
    data = ["foobar_js.js"],
    entry_point = "test_js.js",
    log_level = "debug",
)

sh_binary(
    name = "merger",
    srcs = ["merger.sh"],
    visibility = ["//visibility:public"],
)

# keep
bzl_library(
    name = "custom_js_test",
    srcs = ["custom_js_test.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@aspect_rules_js//js:libs",
        "@bazel_skylib//lib:dicts",
    ],
)