load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "coverage",
    srcs = glob(["*.ts"]),
    declaration = True,
    source_map = True,
    transpiler = "tsc",
    tsconfig = "tsconfig.json",
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/@types/istanbul-lib-coverage",
        "//:node_modules/@types/istanbul-lib-report",
        "//:node_modules/@types/istanbul-reports",
        "//:node_modules/@types/node",
        "//:node_modules/istanbul-lib-coverage",
        "//:node_modules/istanbul-lib-report",
        "//:node_modules/istanbul-reports",
        "//:node_modules/v8-to-istanbul",
    ],
)
