load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "coverage",
    srcs = glob(["*.ts"]),
    declaration = True,
    source_map = True,
    transpiler = "tsc",
    tsconfig = "tsconfig.json",
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/monocart-coverage-reports",
    ],
)
